--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css">
+  <script src="%PUBLIC_URL%/jquery.min.js"></script>
   <script src="%PUBLIC_URL%/bootstrap.min.js"></script>
   <title>暴风雪山庄</title>
 </head>
