增加发布信息，编辑Readme

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css">
   <script src="%PUBLIC_URL%/jquery.min.js"></script>
   <script src="%PUBLIC_URL%/bootstrap.min.js"></script>
-  <title>暴风雪山庄</title>
+  <title>Snowstorm Villa</title>
 </head>
 <body>
 <noscript>
