增加标题栏、指定第一名角色为凶手的功能

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,25 @@
 <noscript>
   You need to enable JavaScript to run this app.
 </noscript>
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+  <div class="container" style="width: 1000px">
+    <a class="navbar-brand">
+      暴风雪山庄 · 导演工具
+    </a>
+    <span class="nav-link mr-auto">
+      <a class="spacing-inline-5" target="_blank" href="https://www.mistytown.cn/forum.php?mod=viewthread&tid=1147">
+        规则链接
+      </a>
+    </span>
+    <span style="line-height: 1rem; padding: 0px">
+      <small>
+        <b>原作：小风 | </b>
+        <a target="_blank" href="https://github.com/lydrainbowcat/snowstorm-villa">工具版本：0.9.1</a>
+        <br>开发：ITX351, lydrainbowcat</span>
+      </small>
+    </span>
+  </div>
+</nav>
 <div id="root"></div>
 </body>
 </html>
