更新规则链接

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       暴风雪山庄 · 导演工具
     </a>
     <span class="nav-link mr-auto">
-      <a class="spacing-inline-5" target="_blank" href="https://www.mistytown.cn/forum.php?mod=viewthread&tid=1147">
+      <a class="spacing-inline-5" target="_blank" href="http://www.mistytown.cn:83/forum.php?mod=viewthread&tid=1147">
         规则链接
       </a>
     </span>
