--- a/public/index.html
+++ b/public/index.html
@@ -21,14 +21,14 @@
       暴风雪山庄 · 导演工具
     </a>
     <span class="nav-link mr-auto">
-      <a class="spacing-inline-5" target="_blank" href="http://www.mistytown.cn:83/forum.php?mod=viewthread&tid=1147">
+      <a class="spacing-inline-5" target="_blank" href="/forum.php?mod=viewthread&tid=1147">
         规则链接
       </a>
     </span>
     <span style="line-height: 1rem; padding: 0px">
       <small>
         <b>原作：小风 | </b>
-        <a target="_blank" href="https://github.com/lydrainbowcat/snowstorm-villa">工具版本：0.9.2</a>
+        <a target="_blank" href="https://github.com/lydrainbowcat/snowstorm-villa">工具版本：0.9.3</a>
         <br>开发：ITX351, lydrainbowcat</span>
       </small>
     </span>
