--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <noscript>
   You need to enable JavaScript to run this app.
 </noscript>
-<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-light" style="background-color: #e3f2fd; width: 100%">
   <div class="container" style="width: 1000px">
     <a class="navbar-brand">
       暴风雪山庄 · 导演工具
